# Homeworks

CMPE 321 Introduction to Database/Homework2/source/: CMakeLists.txt
CMPE 321 Introduction to Database/Homework2/source/inc/: Datatype.h  LogManager.h  Page.h  PageManager.h  QueryManager.h  Record.h  StorageManager.h  Type.h
CMPE 321 Introduction to Database/Homework2/source/src/: LogManager.cpp  Page.cpp  PageManager.cpp  QueryManager.cpp  Record.cpp  StorageManager.cpp  Type.cpp  main.cpp
CMPE 321 Introduction to Database/Homework3/: cmpe321_hw3.sql
METU 441 Data Structures/HW1/: ElectronicProduct.cpp  ElectronicProduct.h  ElectronicProduct_datatype.h  allProductData.txt  gameConsole.cpp  gameConsole.h  laptopComp.cpp  laptopComp.h  main  main.cpp  makefile  smartPhone.cpp  smartPhone.h  tv.cpp  tv.h
METU 441 Data Structures/HW2/: cnode.cpp  cnode.h  dnode.cpp  dnode.h  dynamicqueue.h  eeaircraft.cpp  eeaircraft.h  eecapsule.cpp  eecapsule.h  enode.cpp  enode.h  main  main.cpp  makefile  node.cpp  node.h  queue.cpp  queue.h  sorteddynamicqueue.cpp  sorteddynamicqueue.h  stack.cpp  stack.h  treenode.cpp  treenode.h  userinterface.cpp  userinterface.h
METU EE583 Pattern Recognition/: README  configure.sh
METU EE583 Pattern Recognition/Adaboost/: CMakeCache.txt  Makefile  TrainingResults.txt  cmake_install.cmake  detectionNegativeSamples.sh  detectionPositiveSamples.sh  enode.cpp  main.cpp  sorteddynamicqueue.cpp  sorteddynamicqueue.h  trainAdaboost.sh
METU EE583 Pattern Recognition/Cascaded/: CMakeCache.txt  CMakeLists.txt  Makefile  TrainingResults.txt  (+14 more)
(+32 files in other folders)
